--- a/_publications/201801.md
+++ b/_publications/201801.md
@@ -2,7 +2,7 @@
 title: "Evolution of debris flow activities in Gaojiagou Ravine during 2008–2016 after the Wenchuan earthquake"
 collection: publications
 permalink: /publication/201801
-excerpt: 
+excerpt: 'We evaluated the evolution of debris-flow activities near the epicentre of the Wenchuan earthquake in this paper.'
 date: 2018-02-03
 venue: 'Engineering Geology'
 paperurl:
