--- a/_publications/201801.md
+++ b/_publications/201801.md
@@ -13,7 +13,7 @@ venue: 'Engineering Geology'
 paperurl:
 citation:
 ---
-****  The 2008 Wenchuan earthquake in Sichuan, China triggered numerous landslides in the stricken area. The loose landslide materials retained on mountain slopes and in gullies are prone to reactivation and may transform into debris flows in the rainy season. Nine years after the Wenchuan earthquake, debris flows are still active in Gaojiagou Ravine 16.5 km north of the epicentre. On 14 August 2010, 3 July 2011, 13 July 2013, and 6 July 2016, four large-scale debris flows were triggered by heavy storms in Gaojiagou Ravine. The four debris flows blocked the Minjiang River twice and caused severe damage to nearby villages and reconstruction sites. Several questions arise from these repeated debris flows. Did the level of triggering rainfall change in the four debris flow events? How did the initiation mechanism evolve over time? What are the differences in the runout characteristics in the four events? How did the check dams constructed in 2012 function in the subsequent debris flows? In this paper, we evaluated the loose deposit volumes in Gaojiagou Ravine before and after each of the four debris flows and the runout volumes, and analysed the triggering rainfall intensities, initiation mechanisms and runout characteristics of the four debris flows. The rainfall threshold for the debris flows in Gaojiagou Ravine increased over time, and the initiation mechanisms evolved from landslides to channel-bed failure, and subsequently to channel-bank erosion. The mobility of the debris flows decreased from 2010 to 2016 as the initiation positions moved lower and the particle size of the runout materials became coarser.
+**ABSTRACT**  The 2008 Wenchuan earthquake in Sichuan, China triggered numerous landslides in the stricken area. The loose landslide materials retained on mountain slopes and in gullies are prone to reactivation and may transform into debris flows in the rainy season. Nine years after the Wenchuan earthquake, debris flows are still active in Gaojiagou Ravine 16.5 km north of the epicentre. On 14 August 2010, 3 July 2011, 13 July 2013, and 6 July 2016, four large-scale debris flows were triggered by heavy storms in Gaojiagou Ravine. The four debris flows blocked the Minjiang River twice and caused severe damage to nearby villages and reconstruction sites. Several questions arise from these repeated debris flows. Did the level of triggering rainfall change in the four debris flow events? How did the initiation mechanism evolve over time? What are the differences in the runout characteristics in the four events? How did the check dams constructed in 2012 function in the subsequent debris flows? In this paper, we evaluated the loose deposit volumes in Gaojiagou Ravine before and after each of the four debris flows and the runout volumes, and analysed the triggering rainfall intensities, initiation mechanisms and runout characteristics of the four debris flows. The rainfall threshold for the debris flows in Gaojiagou Ravine increased over time, and the initiation mechanisms evolved from landslides to channel-bed failure, and subsequently to channel-bank erosion. The mobility of the debris flows decreased from 2010 to 2016 as the initiation positions moved lower and the particle size of the runout materials became coarser.
 
 [Find paper here](https://www.sciencedirect.com/science/article/pii/S0013795217313339)
 
