--- a/_publications/201801.md
+++ b/_publications/201801.md
@@ -17,4 +17,4 @@ citation:
 
 [Find paper here](https://www.sciencedirect.com/science/article/pii/S0013795217313339)
 
-Recommended citation: Fan, R. L., Zhang, L. M., Wang, H. J., & Fan, X. M. (2018). Evolution of debris flow activities in Gaojiagou Ravine during 2008–2016 after the Wenchuan earthquake. Engineering Geology, 235, 1-10.
+Recommended citation: Fan, R. L., Zhang, L. M., **Wang, H. J.**, & Fan, X. M. (2018). Evolution of debris flow activities in Gaojiagou Ravine during 2008–2016 after the Wenchuan earthquake. Engineering Geology, 235, 1-10.
