--- a/_publications/201801.md
+++ b/_publications/201801.md
@@ -2,12 +2,12 @@
 title: "Evolution of debris flow activities in Gaojiagou Ravine during 2008–2016 after the Wenchuan earthquake"
 collection: publications
 permalink: /publication/201801
-excerpt: Highlights:  
+excerpt: 'Highlights:  
 * We evaluated the evolution of debris-flow activities near the epicentre of the Wenchuan earthquake.
 * Four large debris flows in 2010, 2011, 2013, and 2016 were examined in detail.
 * The initiation mechanisms evolved from landslides to channel-bed failure and bank erosion.
 * The mobility decreased as the initiation positions became lower and the soil became coarser.
-* The triggering cumulative rainfall increased from 156 mm in 2010 to 177 mm in 2016.
+* The triggering cumulative rainfall increased from 156 mm in 2010 to 177 mm in 2016.'
 date: 2018-02-03
 venue: 'Engineering Geology'
 paperurl:
