--- a/_publications/202101.md
+++ b/_publications/202101.md
@@ -12,4 +12,4 @@ citation: 'Wang, H., Zhang, L., Luo, H., He, J., & Cheung, R. W. M. (2021). AI-p
 
 [Find paper here](https://www.sciencedirect.com/science/article/pii/S0013795221001149)
 
-Recommended citation: Wang, H., Zhang, L., Luo, H., He, J., & Cheung, R. W. M. (2021). AI-powered Landslide Susceptibility Assessment in Hong Kong. Engineering Geology, 106103.
+[![Landslide susceptibility of Hong Kong]](https://ars.els-cdn.com/content/image/1-s2.0-S0013795221001149-gr13_lrg.jpg)
