--- a/_publications/202101.md
+++ b/_publications/202101.md
@@ -10,6 +10,7 @@ citation: 'Wang, H., Zhang, L., Luo, H., He, J., & Cheung, R. W. M. (2021). AI-p
 ---
 **ABSTRACT**  Landslide susceptibility assessment is essential for regional landslide risk assessment and mitigation. Most past studies involved cell-based analysis that takes landslide incidents as geo-spatial points. Nevertheless, given that a landslide is a two-dimensional polygon on maps and a three-dimensional object in the real world, an object-wise assessment is more logical. Fusing with artificial intelligence (AI) techniques, this paper proposes a novel AI-powered object-based landslide susceptibility assessment method to address this issue. First, landslide and non-landslide objects are defined based on an optimal object size determined by statistics of historical landslides. Next, landslide and non-landslide samples are constructed by integrating geoenvironmental data layers derived from multi-source data. Subsequently, AI techniques are applied to learn susceptibility prediction based on the prepared samples. To illustrate the proposed method, a comprehensive case study of Hong Kong is conducted, in which six AI algorithms are evaluated including logistic regression (area under curve, AUC = 0.949), random forest (AUC = 0.951), LogitBoost (AUC = 0.958), convolutional neural network (CNN) (AUC = 0.966), bidirectional long short-term memory architecture of recurrent neural network (BiLSTM-RNN) (AUC = 0.966), and CNN-LSTM (AUC = 0.972), among which the BiLSTM-RNN and CNN-LSTM algorithms are applied in landslide susceptibility assessment for the first time. Results confirm that the proposed object-based method outperforms the traditional cell-based method significantly. Equally importantly, the case study produced the first set of AI-based territory-wide landslide susceptibility maps for Hong Kong. These maps can be used as a fundamental tool for quantifying natural terrain landslide risk and identifying susceptible zones where landslide mitigation measures may be needed.
 
-[Find paper here](https://www.sciencedirect.com/science/article/pii/S0013795221001149)
+[Find paper here](https://www.sciencedirect.com/science/article/pii/S0013795221001149)  
 
 ![Landslide susceptibility of Hong Kong](https://ars.els-cdn.com/content/image/1-s2.0-S0013795221001149-gr13_lrg.jpg)
+Landslide susceptibility map of Hong Kong using (a) logistic regression; (b) random forest; (c) LogitBoost; (d) CNN; (e) BiLSTM-RNN and (f) CNN-LSTM.
