--- a/_publications/202101.md
+++ b/_publications/202101.md
@@ -2,7 +2,7 @@
 title: "AI-powered landslide susceptibility assessment in Hong Kong"
 collection: publications
 permalink: /publication/202101
-excerpt: 'Highlights: 1. A novel artificial intelligence and object-based landslide susceptibility method is proposed and validated. 2. The first set of territory-wide landslide susceptibility maps for Hong Kong is produced based on AI techniques. 3. CNN-LSTM and BiLSTM-RNN are successfully applied to landslide susceptibility analysis for the first time. 4. The proposed AI-powered object-based method outperforms the cell-based method significantly.'
+excerpt: 'Highlights: 1. A novel artificial intelligence and object-based landslide susceptibility method is proposed and validated.<br> 2. The first set of territory-wide landslide susceptibility maps for Hong Kong is produced based on AI techniques.<br> 3. CNN-LSTM and BiLSTM-RNN are successfully applied to landslide susceptibility analysis for the first time.<br> 4. The proposed AI-powered object-based method outperforms the cell-based method significantly.'
 date: 2021-04-02
 venue: 'Engineering Geology'
 paperurl: 'https://doi.org/10.1016/j.enggeo.2021.106103'
