--- a/_publications/202101.md
+++ b/_publications/202101.md
@@ -2,7 +2,7 @@
 title: "AI-powered landslide susceptibility assessment in Hong Kong"
 collection: publications
 permalink: /publication/202101
-excerpt: 'Highlights: 1. A novel artificial intelligence and object-based landslide susceptibility method is proposed and validated.<br> 2. The first set of territory-wide landslide susceptibility maps for Hong Kong is produced based on AI techniques.<br> 3. CNN-LSTM and BiLSTM-RNN are successfully applied to landslide susceptibility analysis for the first time.<br> 4. The proposed AI-powered object-based method outperforms the cell-based method significantly.'
+excerpt: 'Highlights:<br> 1. A novel artificial intelligence and object-based landslide susceptibility method is proposed and validated.<br> 2. The first set of territory-wide landslide susceptibility maps for Hong Kong is produced based on AI techniques.<br> 3. CNN-LSTM and BiLSTM-RNN are successfully applied to landslide susceptibility analysis for the first time.<br> 4. The proposed AI-powered object-based method outperforms the cell-based method significantly.'
 date: 2021-04-02
 venue: 'Engineering Geology'
 paperurl: 'https://doi.org/10.1016/j.enggeo.2021.106103'
@@ -13,4 +13,4 @@ citation: 'Wang, H., Zhang, L., Luo, H., He, J., & Cheung, R. W. M. (2021). AI-p
 [Find paper here](https://www.sciencedirect.com/science/article/pii/S0013795221001149)  
 
 ![Landslide susceptibility of Hong Kong](https://ars.els-cdn.com/content/image/1-s2.0-S0013795221001149-gr13_lrg.jpg)
-Landslide susceptibility map of Hong Kong using (a) logistic regression; (b) random forest; (c) LogitBoost; (d) CNN; (e) BiLSTM-RNN and (f) CNN-LSTM.
+The first set of AI-based landslide susceptibility maps of Hong Kong using (a) logistic regression; (b) random forest; (c) LogitBoost; (d) CNN; (e) BiLSTM-RNN and (f) CNN-LSTM.
