--- a/_publications/202002.md
+++ b/_publications/202002.md
@@ -8,7 +8,7 @@ venue: 'Geoscience Frontiers'
 paperurl: 'https://www.sciencedirect.com/science/article/pii/S1674987120300542'
 citation: 'Wang, H., Zhang, L., Yin, K., Luo, H. and Li, J., 2021. Landslide identification using machine learning. Geoscience Frontiers, 12(1), pp.351-364.'
 ---
-This paper is about the number 2. The number 3 is left for future work.
+**ABSTRACT**  Landslide identification is critical for risk assessment and mitigation. This paper proposes a novel machine-learning and deep-learning method to identify natural-terrain landslides using integrated geodatabases. First, landslide-related data are compiled, including topographic data, geological data and rainfall-related data. Then, three integrated geodatabases are established; namely, Recent Landslide Database (RecLD), Relict Landslide Database (RelLD) and Joint Landslide Database (JLD). After that, five machine learning and deep learning algorithms, including logistic regression (LR), support vector machine (SVM), random forest (RF), boosting methods and convolutional neural network (CNN), are utilized and evaluated on each database. A case study in Lantau, Hong Kong, is conducted to demonstrate the application of the proposed method. From the results of the case study, CNN achieves an identification accuracy of 92.5% on RecLD, and outperforms other algorithms due to its strengths in feature extraction and multi dimensional data processing. Boosting methods come second in terms of accuracy, followed by RF, LR and SVM. By using machine learning and deep learning techniques, the proposed landslide identification method shows outstanding robustness and great potential in tackling the landslide identification problem.
 
 [Find paper here](https://www.sciencedirect.com/science/article/pii/S1674987120300542)
 
