--- a/_publications/202002.md
+++ b/_publications/202002.md
@@ -12,4 +12,8 @@ citation: 'Wang, H., Zhang, L., Yin, K., Luo, H. and Li, J., 2021. Landslide ide
 
 [Find paper here](https://www.sciencedirect.com/science/article/pii/S1674987120300542)
 
-Recommended citation: Wang, H., Zhang, L., Yin, K., Luo, H. and Li, J., 2021. Landslide identification using machine learning. <i>Geoscience Frontiers</i>, 12(1), pp.351-364.
+![Graphical abstract](https://ars.els-cdn.com/content/image/1-s2.0-S1674987120300542-fx1_lrg.jpg)
+Graphical abstract
+
+![Graphical abstract](https://ars.els-cdn.com/content/image/1-s2.0-S1674987120300542-gr10_lrg.jpg)
+Landslide identification results using deep convolutional neural network(DCNN):(a) predicted recent landslides using DCNN-11 and (b) recent landslides in Enhanced Natural Terrain Landslide Inventory (ENTLI).
