--- a/_publications/202111.md
+++ b/_publications/202111.md
@@ -2,7 +2,7 @@
 title: "An Automated Snow Mapper Powered by Machine Learning"
 collection: publications
 permalink: /publication/202111
-excerpt: 'Highlights: 1. We evaluated the evolution of debris-flow activities near the epicentre of the Wenchuan earthquake. 2. Four large debris flows in 2010, 2011, 2013, and 2016 were examined in detail. 3. The initiation mechanisms evolved from landslides to channel-bed failure and bank erosion. 4. The mobility decreased as the initiation positions became lower and the soil became coarser. 5. The triggering cumulative rainfall increased from 156 mm in 2010 to 177 mm in 2016.'
+excerpt: 'Highlights:<br> 1. We developed an Automated Snow Mapper Powered by Machine Learning (AutoSMILE), which is the first machine learning-based open-source system for snow mapping. <br> 2. The machine learning techniques and object-based analysis were successfully integrated in AutoSMILE. <br>3. AutoSMILE is tested in two regions on the Tibetan Plateau.<br>4. AutoSMILE is a fast and reliable tool for large-scale high-accuracy snow mapping and monitoring.'
 date: 2021-11-27
 venue: 'Remote Sensing'
 paperurl: 'https://doi.org/10.3390/rs13234826'
@@ -12,4 +12,5 @@ citation: 'Wang, H.; Zhang, L.; Wang, L.; He, J.; Luo, H. (2021) An Automated Sn
 
 [Find paper here](https://www.mdpi.com/2072-4292/13/23/4826)
 
-Recommended citation: Fan, R. L., Zhang, L. M., **Wang, H. J.**, & Fan, X. M. (2018). Evolution of debris flow activities in Gaojiagou Ravine during 2008–2016 after the Wenchuan earthquake. Engineering Geology, 235, 1-10.
+![Graphical abstrct](https://www.mdpi.com/remotesensing/remotesensing-13-04826/article_deploy/html/images/remotesensing-13-04826-ag.png)
+Graphical abstract
