Update and rename 2017-09-12.md to 2017-09-12-talk.md

--- a/_talks/2017-09-12-talk.md
+++ b/_talks/2017-09-12-talk.md
@@ -2,7 +2,7 @@
 title: "Updating Physically-based Landslide Susceptibility Using Bayesian Networks"
 collection: talks
 type: "Conference Presentation"
-permalink: /talks/2017-09-12.md
+permalink: /talks/2017-09-12-talk.md
 venue: "COMUS17: Computational Modelling of Multi-Uncertainty and Multi-Scale Problems"
 date: 2017-09-12
 location: "University of Porto, Porto, Portugal"
