--- a/_publications/202002.md
+++ b/_publications/202002.md
@@ -12,8 +12,8 @@ citation: 'Wang, H., Zhang, L., Yin, K., Luo, H. and Li, J., 2021. Landslide ide
 
 [Find paper here](https://www.sciencedirect.com/science/article/pii/S1674987120300542)
 
-<kbd>![Graphical abstract](https://ars.els-cdn.com/content/image/1-s2.0-S1674987120300542-fx1_lrg.jpg)</kbd>
-Graphical abstract
+<img src="https://ars.els-cdn.com/content/image/1-s2.0-S1674987120300542-fx1_lrg.jpg" style="border:2px solid black">
+**Graphical abstract**
 
-<kbd>![Landslide identification results](https://ars.els-cdn.com/content/image/1-s2.0-S1674987120300542-gr10_lrg.jpg)</kbd>
-Landslide identification results using deep convolutional neural network(DCNN):(a) predicted recent landslides using DCNN-11 and (b) recent landslides in Enhanced Natural Terrain Landslide Inventory (ENTLI).
+<img src="https://ars.els-cdn.com/content/image/1-s2.0-S1674987120300542-gr10_lrg.jpg" style="border:2px solid black">
+**Landslide identification results using deep convolutional neural network(DCNN):(a) predicted recent landslides using DCNN-11 and (b) recent landslides in Enhanced Natural Terrain Landslide Inventory (ENTLI).**
