--- a/_publications/202101.md
+++ b/_publications/202101.md
@@ -13,4 +13,4 @@ citation: 'Wang, H., Zhang, L., Luo, H., He, J., & Cheung, R. W. M. (2021). AI-p
 [Find paper here](https://www.sciencedirect.com/science/article/pii/S0013795221001149)  
 
 ![Landslide susceptibility of Hong Kong](https://ars.els-cdn.com/content/image/1-s2.0-S0013795221001149-gr13_lrg.jpg)
-The first set of AI-based landslide susceptibility maps of Hong Kong using (a) logistic regression; (b) random forest; (c) LogitBoost; (d) CNN; (e) BiLSTM-RNN and (f) CNN-LSTM.
+**The first set of AI-based landslide susceptibility maps of Hong Kong using (a) logistic regression; (b) random forest; (c) LogitBoost; (d) CNN; (e) BiLSTM-RNN and (f) CNN-LSTM.**
