--- a/_publications/202111.md
+++ b/_publications/202111.md
@@ -12,5 +12,5 @@ citation: 'Wang, H.; Zhang, L.; Wang, L.; He, J.; Luo, H. (2021) An Automated Sn
 
 [Find paper here](https://www.mdpi.com/2072-4292/13/23/4826)
 
-![Graphical abstrct](https://www.mdpi.com/remotesensing/remotesensing-13-04826/article_deploy/html/images/remotesensing-13-04826-ag.png)
-Graphical abstract
+<img src="https://www.mdpi.com/remotesensing/remotesensing-13-04826/article_deploy/html/images/remotesensing-13-04826-ag.png" style="border:2px solid black">
+**Graphical abstract**
