--- a/_publications/201902.md
+++ b/_publications/201902.md
@@ -2,7 +2,7 @@
 title: "A novel physically-based model for updating landslide susceptibility"
 collection: publications
 permalink: /publication/201902
-excerpt: '<img src="/images/EG2019.png" width="250" height="360" style="border:1px solid black;float:left"><strong>Highlights:</strong><br> 1. We developed a novel physically-based method for updating landslide susceptibility.<br> 2. Susceptibility is related to spatially and cross correlated soil parameters via Bayes theory.<br> 3. Observed slope performance is used to update landslide susceptibility and soil parameters.<br> 4. The accuracy and capacity of landslide susceptibility analysis are improved significantly.'
+excerpt: '<img src="/images/EG2019.png" width="250" height="360" style="float:left"><strong>Highlights:</strong><br> 1. We developed a novel physically-based method for updating landslide susceptibility.<br> 2. Susceptibility is related to spatially and cross correlated soil parameters via Bayes theory.<br> 3. Observed slope performance is used to update landslide susceptibility and soil parameters.<br> 4. The accuracy and capacity of landslide susceptibility analysis are improved significantly.'
 date: 2019-02-07
 venue: 'Engineering Geology'
 paperurl: 'https://doi.org/10.1016/j.enggeo.2019.02.004'
