--- a/_publications/201902.md
+++ b/_publications/201902.md
@@ -6,7 +6,7 @@ excerpt: '<img src="/images/EG2019.png" width="250" height="360" style="float:ri
 date: 2019-02-07
 venue: 'Engineering Geology'
 paperurl: 'https://doi.org/10.1016/j.enggeo.2019.02.004'
-citation: 'Wang, H.J., Xiao, T., Li, X.Y., Zhang, L.L. and Zhang, L.M., 2019. A novel physically-based model for updating landslide susceptibility. <i>Engineering Geology</i>, 251, pp.71-80.'
+citation: 'Wang, H.J., Xiao, T., Li, X.Y., Zhang, L.L. and Zhang, L.M., 2019. A novel physically-based model for updating landslide susceptibility. <i>Engineering Geology</i>, 251, 71-80.'
 ---
 **ABSTRACT**  A novel physically-based method for updating landslide susceptibility is presented in this paper, considering both spatial and cross correlations. First, a Bayesian network relating landslide susceptibility to spatially and cross correlated soil parameters is constructed for susceptibility assessment. Then, the correlations among the grid cells and the prior probabilities of the Bayesian network are quantified utilizing Monte Carlo simulation and random field theory. After that, observed slope performance information is used to update the landslide susceptibility and the soil parameters. Two case studies were worked out to illustrate the application of the proposed method. It is found that the integration of performance information of certain cells significantly improves the susceptibility evaluation of the adjacent cells and the updated soil properties are closer to the reality. By introducing the Bayesian network to physically-based landslide susceptibility, this method is able to consider the inherent correlations in landslide susceptibility analysis and update regional landslide susceptibility and soil parameters utilizing performance information, effectively improving the accuracy and capacity of physically-based landslide susceptibility analysis.
 
