--- a/_publications/202101.md
+++ b/_publications/202101.md
@@ -6,7 +6,7 @@ excerpt: '<img src="/images/EG2021.png" width="250" height="360" style="float:ri
 date: 2021-04-02
 venue: 'Engineering Geology'
 paperurl: 'https://doi.org/10.1016/j.enggeo.2021.106103'
-citation: 'Wang, H., Zhang, L., Luo, H., He, J., & Cheung, R. W. M. (2021). AI-powered Landslide Susceptibility Assessment in Hong Kong. Engineering Geology, 106103.'
+citation: 'Wang, H., Zhang, L., Luo, H., He, J., & Cheung, R. W. M. (2021). AI-powered Landslide Susceptibility Assessment in Hong Kong. Engineering Geology, 288, 106103.'
 ---
 **ABSTRACT**  Landslide susceptibility assessment is essential for regional landslide risk assessment and mitigation. Most past studies involved cell-based analysis that takes landslide incidents as geo-spatial points. Nevertheless, given that a landslide is a two-dimensional polygon on maps and a three-dimensional object in the real world, an object-wise assessment is more logical. Fusing with artificial intelligence (AI) techniques, this paper proposes a novel AI-powered object-based landslide susceptibility assessment method to address this issue. First, landslide and non-landslide objects are defined based on an optimal object size determined by statistics of historical landslides. Next, landslide and non-landslide samples are constructed by integrating geoenvironmental data layers derived from multi-source data. Subsequently, AI techniques are applied to learn susceptibility prediction based on the prepared samples. To illustrate the proposed method, a comprehensive case study of Hong Kong is conducted, in which six AI algorithms are evaluated including logistic regression (area under curve, AUC = 0.949), random forest (AUC = 0.951), LogitBoost (AUC = 0.958), convolutional neural network (CNN) (AUC = 0.966), bidirectional long short-term memory architecture of recurrent neural network (BiLSTM-RNN) (AUC = 0.966), and CNN-LSTM (AUC = 0.972), among which the BiLSTM-RNN and CNN-LSTM algorithms are applied in landslide susceptibility assessment for the first time. Results confirm that the proposed object-based method outperforms the traditional cell-based method significantly. Equally importantly, the case study produced the first set of AI-based territory-wide landslide susceptibility maps for Hong Kong. These maps can be used as a fundamental tool for quantifying natural terrain landslide risk and identifying susceptible zones where landslide mitigation measures may be needed.
 
