--- a/_publications/202207a.md
+++ b/_publications/202207a.md
@@ -2,7 +2,7 @@
 title: "Machine learning powered high-resolution co-seismic landslide detection"
 collection: publications
 permalink: /publication/202207a
-excerpt: '<img src="/images/GR2022a.png" width="250" height="360" style="float:left"> <strong>Highlights:</strong><br> 1. An integrated machine-learning co-seismic landslide detection method has been developed. <br>2. The new method combines multi-source data and pixel- and object-based treatments.<br>3. The influence of training data size on detection performance is systematically investigated.<br>4. The proposed method exhibits outstanding performance in two earthquake case studies.'
+excerpt: '<img src="/images/GR2022a.png" width="250" height="360" style="float:right"> <strong>Highlights:</strong><br> 1. An integrated machine-learning co-seismic landslide detection method has been developed. <br>2. The new method combines multi-source data and pixel- and object-based treatments.<br>3. The influence of training data size on detection performance is systematically investigated.<br>4. The proposed method exhibits outstanding performance in two earthquake case studies.'
 date: 2022-07-05
 venue: 'Gondwana Research'
 paperurl: 'https://doi.org/10.1016/j.gr.2022.07.004'
