--- a/_publications/202111.md
+++ b/_publications/202111.md
@@ -10,7 +10,9 @@ citation: 'Wang, H.J., Zhang, L.M., Wang, L., He, J., Luo, H.Y., 2021. An Automa
 ---
 **ABSTRACT**  Snow preserves fresh water and impacts regional climate and the environment. Enabled by modern satellite Earth observations, fast and accurate automated snow mapping is now possible. In this study, we developed the Automated Snow Mapper Powered by Machine Learning (AutoSMILE), which is the first machine learning-based open-source system for snow mapping. It is built in a Python environment based on object-based analysis. AutoSMILE was first applied in a mountainous area of 1002 km2 in Bome County, eastern Tibetan Plateau. A multispectral image from Sentinel-2B, a digital elevation model, and machine learning algorithms such as random forest and convolutional neural network, were utilized. Taking only 5% of the study area as the training zone, AutoSMILE yielded an extraordinarily satisfactory result over the rest of the study area: the producer’s accuracy, user’s accuracy, intersection over union and overall accuracy reached 99.42%, 98.78%, 98.21% and 98.76%, respectively, at object level, corresponding to 98.84%, 98.35%, 97.23% and 98.07%, respectively, at pixel level. The model trained in Bome County was subsequently used to map snow at the Qimantag Mountain region in the northern Tibetan Plateau, and a high overall accuracy of 97.22% was achieved. AutoSMILE outperformed threshold-based methods at both sites and exhibited superior performance especially in handling complex land covers. The outstanding performance and robustness of AutoSMILE in the case studies suggest that AutoSMILE is a fast and reliable tool for large-scale high-accuracy snow mapping and monitoring.
 
-[Find paper here](https://www.mdpi.com/2072-4292/13/23/4826)
+[Find paper link here](https://www.mdpi.com/2072-4292/13/23/4826)
+
+[Click here to download the full paper](https://github.com/cehjwang/cehjwang.github.io/raw/master/files/Wang-2021-An%20Automated%20Snow%20Mapper%20Powered%20by.pdf)
 
 <img src="https://www.mdpi.com/remotesensing/remotesensing-13-04826/article_deploy/html/images/remotesensing-13-04826-ag.png" style="border:2px solid black">
 **Graphical abstract**
