--- a/_publications/202207a.md
+++ b/_publications/202207a.md
@@ -12,5 +12,7 @@ citation: 'Wang, H.J., Zhang, L.M., Wang, L., Fan, R.L., Zhou, S.Y., Qiang, Y.J.
 
 [Find paper here](https://doi.org/10.1016/j.gr.2022.07.004)
 
+[Click here to download the full paper](https://github.com/cehjwang/cehjwang.github.io/raw/master/files/Wang-2022-Machine%20learning%20powered%20high-resolu.pdf)
+
 <img src="https://ars.els-cdn.com/content/image/1-s2.0-S1342937X22002064-ga1_lrg.jpg" style="border:2px solid black">
 **Graphical abstract**
