--- a/_publications/202207b.md
+++ b/_publications/202207b.md
@@ -12,5 +12,7 @@ citation: 'Wang, H.J., Wang, L., Zhang, L.M., 2022. Transfer learning improves l
 
 [Find paper here](https://doi.org/10.1016/j.gr.2022.07.008)
 
+[Click here to download the full paper](https://github.com/cehjwang/cehjwang.github.io/raw/master/files/Wang-2022-Transfer%20learning%20improves%20landslide.pdf)
+
 <img src="https://ars.els-cdn.com/content/image/1-s2.0-S1342937X22002131-ga1_lrg.jpg" style="border:2px solid black">
 **Graphical abstract**
