--- a/_publications/202207b.md
+++ b/_publications/202207b.md
@@ -10,7 +10,7 @@ citation: 'Wang, H.J., Wang, L., Zhang, L.M., 2022. Transfer learning improves l
 ---
 **ABSTRACT**  Landslide susceptibility assessment is often hindered by the lack of historical landslide records. In this study, we propose a transfer learning-based approach for landslide susceptibility assessment, aiming at substantially im-proving susceptibility prediction using knowledge outside the target domain, especially for regions with limited landslide data. The proposed method first trains a deep learning landslide susceptibility model (i.e., pre-trained model or source model) in a data-rich region (i.e., source domain). Transfer learning techniques are then applied to transfer the knowledge from the source domain to a new region (i.e., target domain) through model transfer and fine-tuning. The transferred model not only carries knowledge from the source domain but is also retrained with data from the target domain, hence achieving a much-improved performance in the new region even with very limited new data. A comprehensive case study in Hong Kong is conducted to investigate the feasibility of the proposed method and the influence of source domain scale on the transfer learning efficiency. Substantial im-provements can be found with the proposed method: the accuracies on the test set of the target domain can be in-creased by 30% and the logarithmic losses can be decreased by 62%. We also reveal that transferring models from larger source domains can accomplish more improvements in both data-rich and data-limited cases. As the very first study that introduces deep transfer learning to landslide susceptibility assessment, the proposed method enables the sharing of landslide knowledge between regions, and is shown to be an intelligent and promising way for improving landslide susceptibility assessment for data-limited regions.
 
-[Find paper here](https://doi.org/10.1016/j.gr.2022.07.008)
+[Find paper link here](https://doi.org/10.1016/j.gr.2022.07.008)
 
 [Click here to download the full paper](https://github.com/cehjwang/cehjwang.github.io/raw/master/files/Wang-2022-Transfer%20learning%20improves%20landslide.pdf)
 
